packages/kyvernoPolicies/chart/tests/mpol/update-image-pull-policy-cel/chainsaw-test/pod-digest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: digest-pod
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro@sha256:0000000000000000000000000000000000000000000000000000000000000000
      command: ["true"]
