packages/kyvernoPolicies/chart/tests/mpol/update-image-pull-policy-cel/chainsaw-test/pod-tagged-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tagged-pod
spec:
  initContainers:
    - name: init
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
      imagePullPolicy: Always
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
      imagePullPolicy: Always
