packages/kyvernoPolicies/chart/tests/mpol/update-image-pull-policy-cel/chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: update-image-pull-policy-cel
spec:
  timeouts:
    cleanup: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: ../policy.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: MutatingPolicy
          metadata:
            name: update-image-pull-policy-cel
          spec:
            matchConditions:
              - name: scope-to-test-ns
                expression: (cel; "object.metadata.namespace == '" + string(bindings.resolve("namespace")) + "'")
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod-tagged.yaml
    - assert:
        file: pod-tagged-mutated.yaml
    - apply:
        file: pod-digest.yaml
    - assert:
        file: pod-digest-mutated.yaml
